Add log messages + improve abstract import

--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -4,10 +4,14 @@
 "Enable for orders","Activer pour les commandes"
 "Enable for products","Activer pour les produits"
 "Enable for stocks","Activer pour les stocks"
+"Enable logs","Activer les logs"
+"Field separator","Séparateur de champ"
 "Host","Hôte"
 "If empty, 21 will be used for FTP and 22 for SFTP","Si vide, 21 sera utilisé pour FTP et 22 pour SFTP"
 "Import","Import"
 "Import %1 path does not exist","Le répertoire d'import %1 n'existe pas"
+"Logistic logs","Logs logistique"
+"Logs will be stored into var/log/logistic.log","Les logs seront stockés dans var/log/logistic.log"
 "Username","Nom d'utilisateur"
 "Orders files path","Chemin vers les fichiers commandes"
 "Orders archives files path","Chemin vers les archives de commandes"
